--- a/index.html
+++ b/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="estilo/MobileFirst.css">
+  <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
+  <main>
+      <section class="box">
 
-  Order Summary
+        <div class="imagem">
+          <img class="ilust" src="images/illustration-hero.svg" alt="desenho de uma moça escutando música e dançando">
+        </div>
+        <div class="anuncio">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+          <h1 class="titulo">Order Summary</h1>
 
-  Annual Plan
-  $59.99/year
+          <p class="text">
+            You can now listen to millions of songs, audiobooks, and podcasts on any
+            device anywhere you like!
+          </p>
+          <div class="plano">
+            <img class="music" src="images/icon-music.svg" alt="icon music">
+            <h2>Annual Plan</h2>
+            <p class="preco">$59.99/year</p>
+            <a href="#" target="_blank" class="trocar">Change</a>
+          </div>
+        
+          <a href="#" class="botao">Proceed to Payment</a>
 
-  Change
+          <a href="#" class="cancel">Cancel Order</a>
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        </div>
+      </section>
+    
+  </main>
 </body>
+<footer>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Jpnardes" target="_blank">JPNardes</a>.
+  </div>
+</footer>
 </html>
